--- a/src/configs/basic_test.yml
+++ b/src/configs/basic_test.yml
@@ -16,13 +16,14 @@ ARGS:
  model_precision: 'fp32'
  val_batch_size: 1
  nw: 4
- gmodel_path: '../trained_models/pw3d_81.8_58.6.pkl' #'../trained_models/CenterHMR+CAR.pkl'
+ gmodel_path: '../trained_models/pw3d_81.8_58.6.pkl'
  save_visualization_on_img: True
 
  # default: run on demo/images and the results would be saved at demo/images_results
  # for video /path/to/project/CenterHMR_demo/videos/Messi_1
- demo_image_folder: '/path/to/image_folder' #'../demo/videos/Messi_1'
- output_dir: '/path/to/outputdir'
+ data:
+  - demo_image_folder: '/path/to/image_folder'
+    output_dir: '/path/to/outputdir'
  save_mesh: True
  save_centermap: True
  save_dict_results: True
